# marketingnyt

./: .env.example  .gitignore  Dockerfile  EXPERT_DESIGN_OPTIMIZATION_REPORT.md  Makefile  OPTIMIZATION_REPORT.md  README.md  VIDEO_UPLOAD_README.md  add_images_to_articles.py  comprehensive_article_fix.py  comprehensive_danish_translation.py  convert_to_basic_pages.py  create_articles.py  create_footer_pages.py  create_images.py  data_export_final.json  data_export_minimal.json  data_export_simple.json  download_and_upload_images.py  example_upload_video.py  expand_remaining_articles.py  expand_short_articles.py  final_danish_consistency.py  fix_all_articles.py  fix_all_danish.py  fix_duplicate_body_images.py  fix_mixed_language.py  fix_step_mistake.py  fly.toml  manage.py  minimal_export.json  postgres_clean_export.json  postgres_export.json  postgres_export_small.json  postgres_final_export.json  pyproject.toml  pytest.ini  redistribute_body_images.py  restructure_articles.py  sample_articles.csv  (+13 more)
.github/workflows/: ci.yml
marketingnyt/: asgi.py  urls.py  wsgi.py
marketingnyt/settings/: base.py  dev.py  local_postgres.py  prod.py  test.py
news/: admin.py  blocks.py  context_processors.py  image_formats.py  models.py  performance_monitoring.py  seo_optimizations.py  tests.py  views.py
news/migrations/: 0001_initial.py  0002_articlepage_external_url_alter_articlepage_category_and_more.py  0003_articlepage_cover_video_and_more.py  0004_video_alter_articlepage_cover_video.py  0005_basicpage.py
news/templatetags/: news_tags.py
static/: sw.js
static/css/: critical.css  dr-style.css  main.css
static/js/: advanced-interactions.js  main.js  performance.js
templates/: 404.html  500.html  base.html  offline.html
(+25 files in other folders)
